python/testData/inspections/PyUnresolvedReferencesInspection/OneUnsedOneMarked/a.py
from library import foo,<error descr="Unresolved reference 'bar'">bar</error>


print(foo)